--- a/index.html
+++ b/index.html
@@ -458,10 +458,10 @@
               <i class="bx bxl-nodejs"></i>
               <h5 class="h5">Node.js</h5>
             </li>
-            <li class="skills-item">
+<!--             <li class="skills-item">
               <img src="images/express.svg" alt="Express JS" />
               <h5 class="h5">Express.js</h5>
-            </li>
+            </li> -->
             <li class="skills-item">
               <i class="bx bxl-mongodb"></i>
               <h5 class="h5">MongoDB</h5>
