--- a/index.html
+++ b/index.html
@@ -445,10 +445,10 @@
               <i class="bx bxl-react"></i>
               <h5 class="h5">React JS</h5>
             </li>
-            <li class="skills-item">
+<!--             <li class="skills-item">
               <img src="images/next-js.svg" alt="Next JS" />
               <h5 class="h5">Next.js</h5>
-            </li>
+            </li> -->
             <li class="skills-item">
               <i class="bx bxl-redux"></i>
               <h5 class="h5">Redux</h5>
