--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mahrous Gamal - Front-end</title>
+  <title>Mahrous Gamal — Front-end</title>
 
   <!--
     - favicon
@@ -445,7 +445,7 @@
               <i class="bx bxl-react"></i>
               <h5 class="h5">React JS</h5>
             </li>
-<!--             <li class="skills-item">
+            <!--<li class="skills-item">
               <img src="images/next-js.svg" alt="Next JS" />
               <h5 class="h5">Next.js</h5>
             </li> -->
@@ -458,7 +458,7 @@
               <i class="bx bxl-nodejs"></i>
               <h5 class="h5">Node.js</h5>
             </li>
-<!--             <li class="skills-item">
+            <!--<li class="skills-item">
               <img src="images/express.svg" alt="Express JS" />
               <h5 class="h5">Express.js</h5>
             </li> -->
