--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </li>
 
           <li class="social-item">
-            <a href="https://github.com/MahrousGama1?tab=repositories"  target="_blank" class="social-link">
+            <a href="https://github.com/Mahrous-Gamal?tab=repositories"  target="_blank" class="social-link">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
         </li>
